resources/charts-wip/dex/resources/dex-namespace.yml
# A namespace for Dex to live in.
apiVersion: v1
kind: Namespace
metadata:
  name: dex
