resources/charts-wip/dex/resources/dex-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: dex.eraldy.com
      http:
        paths:
          - backend:
              service:
                name: dex
                port:
                  number: 5556
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dex.eraldy.com
        - dex
        - dex.dex
        - dex.dex.svc.cluster.local
      secretName: dex-cert
